# ccc_tool

./: README.md
ccc_tool/: .cproject  .project  CMakeLists.txt
ccc_tool/release/: jikong_test_serial  jikong_test_uart  strip.sh
ccc_tool/src/: CMakeLists.txt
ccc_tool/src/serial/: CMakeLists.txt  devc_fpga_serial.c  devc_fpga_serial.h  jikong_test_serial.c
ccc_tool/src/uart/: CMakeLists.txt  jikong_test_uart.c
